sass/_dark.scss
/*-- -------------------------- -->
<---      Styles for            -->
<---      Dark  Mode Toggle     -->
<--- -------------------------- -*/

/* General Button */
.dark-mode-button {
    cursor: pointer;

    //Display
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;

    //Spacing
    height: 4rem;
    width: 3rem;
    top: 6rem;
    right: 1.5rem;
    z-index: 1000;

    //Image Styling
    background: transparent;

    //Border Styling
    border: none;

    //Animations
    transform: rotate(-90deg);
}

/* Pill Spacing and Location */
.dark-toggle {
    //Display
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;

    //Spacing
    width: 3rem;
    height: 1.6rem;
    margin: 0;
    z-index: 1000;

    //Image Styling
    background: transparent;

    //Border Styling
    border: 3px solid #fff;
    border-radius: 1rem;

    //Animations
    transform: rotate(90deg);
    transition: 0.3s ease;

    @media only screen and (max-width: $bp-small) {
        //Spacing
        display: none;
    }

    /* White Toggle inside Pill */
    &-span {
        //Spacing
        position: absolute;
        height: 2rem;
        width: 2rem;
        left: -8px;

        //Color Styling
        background: #fff;

        //Border Styling
        border-radius: 50%;
        box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);

        //Animations
        transition: 0.3s ease;
    }
}

/* Light Mode Label */
.dark-mode-button:after {
    content: 'Day.';

    //Spacing
    position: absolute;
    right: 22px;
    top: 8px;

    //Font Styling
    font-size: 1.5rem;

    //Color Styling
    color: $body-text-light;

    //Animations
    transform: rotate(90deg);
    transition: all 0.1s;

    @media only screen and (max-width: $bp-small) {
        content: 'Night Mode.';

        //Spacing
        width: 20rem;
        padding: 0.5rem;
        right: -70px;
        top: -17px;

        //Font Styling
        font-size: 3rem;
        font-weight: 300;

        //Color Styling
        color: white;
        background-color: $color-primary-dark;

        //Border Styling
        border-radius: 2.5rem;
    }
}

/* Dark Mode Label */
body.dark-mode .dark-mode-button:after {
    content: 'Night.';

    //Spacing
    right: 16px;
    top: 10px;

    //Font Styling
    font-size: 1.5rem;

    //Color Styling
    color: $body-text-dark;

    //Animations
    transition: all 0.1s;

    @media only screen and (max-width: $bp-small) {
        content: 'Day Mode.';

        //Spacing
        width: 20rem;
        padding: 0.5rem;
        right: -70px;
        top: -17px;

        //Font Styling
        font-size: 3rem;
        font-weight: 300;

        //Color Styling
        background-color: $color-primary;

        border-radius: 2.5rem;
    }
}

/* Pill Background in Light Mode */
.dark-mode-button .dark-toggle {
    //Spacing
    width: 3.5rem;

    //Color Styling
    background: rgb(230, 230, 230);

    //Border Styling
    border-color: rgb(230, 230, 230);
}

/* Pill Background in Dark Mode */
body.dark-mode .dark-toggle {
    //Color Styling
    background: rgb(140, 19, 164);
    background: linear-gradient(
        90deg,
        rgba(140, 19, 164, 1) 0%,
        rgba(93, 13, 109, 1) 40%
    );

    //Border Styling
    border: none;
}

/* Pill Animation */
body.dark-mode .dark-toggle span {
    //Spacing
    left: 1.5rem;

    //Animations
    transition: 0.3s ease;
}

/*-- -------------------------- -->
<---         Styles for         -->
<---         Dark Mode          -->
<--- -------------------------- -*/

body.dark-mode {
    //Color Styling
    background-color: $background-color-dark;
    color: $body-text-dark;

    .header {
        //Color Styling
        background-color: $background-color-dark;
        color: $body-text-dark;
        &__logo {
            //Image Styling
            background-image: url(../img/logo_white.png);
        }
        &__nav {
            @media only screen and (max-width: $bp-smallest) {
                //Color Styling
                background-color: #3a2d3d;
                box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.35);

                //Border Styling
                border-bottom: 1px solid $color-grey-dark;
            }
        }
        & a {
            //Color Styling
            color: $body-text-dark;
        }

        &__hamburger {
            & .bar {
                //Color Styling
                background-color: $body-text-dark;
            }
        }

        &-scrolled {
            //Border Styling
            border-bottom: 1px solid $color-grey-dark;
        }
    }

    .hero {
        //Color Styling
        background-color: $background-color-dark;
        &__title {
            //Color Styling
            color: $background-color-light;
        }
        &__subtitle {
            //Color Styling
            color: $body-text-dark;
        }
        &__image {
            //Image Styling
            background-image: url(../img/forest-night2x.png);

            @media only screen and (max-width: $bp-small) {
                //Image Styling
                background-image: url(../img/forest-night1x.png);
            }
        }
    }

    .contact {
        //Color Styling
        background-color: $background-color-dark;
        &-svg {
            //Color Styling
            filter: invert(1);
        }
        &-header {
            h2 {
                //Color Styling
                color: $color-primary-light;
            }
            h3 {
                //Color Styling
                color: $color-primary-light;
            }
        }
    }

    .projects {
        &__card {
            //Color Styling
            background-color: #3a2d3d;
        }
        &__details {
            h3 {
                //Color Styling
                color: $background-color-light;
            }
            p {
                //Color Styling
                color: $background-color-light;
            }
        }
    }

    .footer {
        //Color Styling
        background-color: $background-color-dark;
        color: $body-text-dark;

        &__logo-box {
            //Image Styling
            background-image: url(../img/logo_tree-light.png);
        }
        &__copyright {
            //Color Styling
            color: $body-text-dark;
        }
    }

    .btn {
        &-contact {
            //Color Styling
            background-color: $color-primary-dark;
            color: $body-text-dark;

            @media only screen and (max-width: $bp-smallest) {
                //Color Styling
                background-color: transparent;
                color: $body-text-light;
            }
        }
    }
    ::selection {
        //Color Styling
        color: $body-text-light;
        background-color: $body-text-dark;
    }
}

